--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^7.0.0-beta.3",
     "babel-runtime": "^7.0.0-beta.3",
     "clean-webpack-plugin": "^0.1.19",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0"
   }
